--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ David <span> munachimso</span>
  
      <div class="social-icons">
        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-       <a href="#"><i class='bx bxl-instagram' ></i></a>
+       <a href="https://github.com/agbadavidmunachi"><i class= <i class='bx bxl-github'</i></a>
        <a href="#"><i class='bx bxl-instagram' ></i></a>
        <a href="#"><i class='bx bxl-facebook'></i></a>
       </div>
