--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ David <span> munachimso</span>
 
     
     </h3>
-   <p> I'm David munachimso a skilled front-end engineer with one year of experience resided in lagos, nigeria. Passionate about automating  building and maintaining high level websites </p>
+   <p> I'm David munachimso a Skilled front-end engineer with one year of experience reside in Lagos, Nigeria Passionate about  building and maintaining high level websites </p>
  
      <div class="social-icons">
        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
@@ -67,7 +67,7 @@ David <span> munachimso</span>
     <h2 class="heading"> About <span> me </span>
     </h2>
     <h3 class="text-animation"> 
-    <p> I'm David munachimso resided in lagos  nigeria  skilled front-end engineer with one year experience passionate about automating  developing and maintaining front end web applications  I'm also a video Editor and content system manager </p>
+    <p> I'm Agba David Munachimso resided in Lagos Nigeria  Skilled front-end Engineer with one year experience passionate about developing and maintaining websites. I'm also a video Editor and content system manager </p>
 
     <a href="#" class="btn" > Read More</a>
    </div>
@@ -79,19 +79,19 @@ David <span> munachimso</span>
   <div class="services-box">
     <i class='bx bx-code'></i>
       <h3>Web development</h3>
-      <p> Hi My name is david munachimso I,m a front end developer wth 1 year experience , and my goals are to build webs and applications that would be of sercive to the society At large </p>
+      <p> Hi My Name is Agba david munachimso I,m a Front end developer wth one year experience My goals are to build webs and applications that would be of service to the society At large </p>
       <a href="#" class="btn">Read More </a>
   </div>
   <div class="services-box">
     <i class='bx bx-camera'></i>
-    <h3>Video Graphy</h3>
-    <p> Hi My Name is david munachimso I,m a frontend engineer with  one year Experience , </p>
+    <h3> video Editor</h3>
+    <p> Hi My Name is Agba david munachimso im Also a skilled videography Editor </p>
     <a href="#" class="btn">Read More </a>
 </div>
 <div class="services-box">
   <i class='bx bxl-blogger'></i>
-  <h3>Blogger</h3>
-  <p>  Welcome to my creative Corner!  I'm david munachimso , a Passionate blogger and content manager </p>
+  <h3>WordPress Developer</h3>
+  <p> Hi I'm Agba david munachimso im also a WordPress Developer and a Content System Manager  </p>
   <a href="#" class="btn">Read More </a>
 </div>
 </div>
