--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ David <span> munachimso</span>
   </p>
 
 </footer>
-<script src="project.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
 
