--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Agba David <span> munachimso</span>
     </h3>
   
      <div class="social-icons">
-       <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+       <a href="https://www.linkedin.com/in/munachimso-agba-a3353b316?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BD%2FSdJfn7R3uoi8PbP3NWIQ%3D%3D"><i class='bx bxl-linkedin-square'></i></a>
        <a href="https://github.com/agbadavidmunachi"><i class='bx bxl-github'></i></a>
        <a href="#"><i class='bx bxl-instagram' ></i></a>
        <a href="https://www.facebook.com/profile.php?id=61552941291554"><i class='bx bxl-facebook'></i></a>
