--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@ Agba David <span> munachimso</span>
       <a href="#" class="btn">Read More </a>
   </div>
   <div class="services-box">
-    <i class='bx bx-camera'></i>
-    <h3>Video Graphy</h3>
+      <i class='bx bxl-wordpress'></i>
+    <h3>WordPress</h3>
     <a href="#" class="btn">Read More </a>
 </div>
 <div class="services-box">
-  <i class='bx bxl-blogger'></i>
-  <h3>Blogger</h3>
+    <i class='bx bx-video-recording'></i>
+  <h3>video Editor</h3>
 
   <a href="#" class="btn">Read More </a>
 </div>
@@ -104,7 +104,7 @@ Agba David <span> munachimso</span>
     <div class="projects-box">
      <img src="assest/pexels-natri-129208.jpg" alt="">
        <div class="projects-info">
-          <h4>Video editor</h4>
+          <h4>web development</h4>
           <a href="#">
             <i class="bx bx-link"></i>
           </a>
@@ -116,8 +116,8 @@ Agba David <span> munachimso</span>
     <div class="projects-box">
       <img src="assest/istockphoto-1924137135-2048x2048.jpg" alt="">
         <div class="projects-info">
-           <h4>Software engineer</h4>
-    <p>Hi My Name is David munachimso I,m a frontend engineer with one year Experience </p>
+           <h4>WordPress</h4>
+    
            <a href="#">
              <i class="bx bx-link"></i>
            </a>
@@ -128,7 +128,7 @@ Agba David <span> munachimso</span>
      <div class="projects-box">
       <img src="assest/pexels-serpstat-177219-572056.jpg" alt="">
         <div class="projects-info">
-           <h4>Content manager</h4>
+           <h4>Video Editor</h4>
     
            <a href="#">
              <i class="bx bx-link"></i>
