--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Agba David <span> munachimso</span>
     </div>
 
     <div class="projects-box">
-      <img src="assest/istockphoto-1924137135-2048x2048.jpg" alt="">
+      <img src="assest/word.png" alt="">s
         <div class="projects-info">
            <h4>WordPress</h4>
     
