--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Agba David <span> munachimso</span>
         <div class="projects-info">
            <h4>WordPress</h4>
     
-           <a href="#">
+           <a href="http://david.earlyyearscorner.online/">
              <i class="bx bx-link"></i>
            </a>
  
